--- a/Music Generation.ipynb
+++ b/Music Generation.ipynb
@@ -120,43 +120,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\n",
-      "K:Bm\n",
+      "DF |\n",
+      "M:6/8\n",
+      "K:A\n",
       "P:A\n",
-      "|:B|\"Em\"E2B B2c|\"Bm\"d2d \"F\"^cd^c|\"Bm\"B^AB \"Bm\"A2G|\"Em\"E2B EFG|\"A7\"ABA GFE|\n",
-      "\"D\"D3 DFA|\"G\"B2B \"D\"A2F|\"Em\"G2F \"G\"GBd|\n",
-      "\"C\"e3 -e2c|\"G\"ded BdB|D6|\"Am\"E2A A^GA|\"D7\"B2^A B2^c|\"D\"d3 -d3|\"G\"d^cd B2d|\n",
-      "\"G\"ded B3| \"Em\"G2c Bcd|\"Am\"e2d \"D7\"c2A|\"G\"G3 G3||\n",
+      "E|\"A\"E2A A^GA|\"E\"B2B e2d|\"A\"c2A AGA|\"E\"B2A B2c|\"E7\"d2B c2d|\n",
+      "\"A\"e2c \"B7\"Baf|\"E\"e2e e2=e|\"3\"efe cBA|\"D\"dfg \"A\"a3|\n",
+      "P:B\n",
+      "f|\"A\"ecA Ace|\"D\"fga \"A\"ecA|\"E7\"B2G \"A\"AAc|\"D\"d3 -d2::\n",
+      "A|\"G\"GFG BAG|\"D\"F2A d2e|\"D\"f2f fed|\"D\"f2d f2g|\n",
+      "\"Am\"aba agf|\"C\"ede g2f|\"D\"fga \"A7\"gfe|\"Dm\"d3 -d2:|\n",
+      "\n",
+      "\n",
+      "X: 264\n",
+      "T:Laml Hankine\n",
+      "% Nottingham Music Database\n",
+      "S:Lesley Dolman, via EF\n",
+      "M:6/8\n",
       "K:D\n",
-      "\"D\"ABd fed|Add d2d|\"D\"d2d d2d|\"A7\"f2e -e2c|\n",
-      "\"D\"d2d d^cd|e2d c2A|\"G\"B2B \"A7\"c2B|\n",
-      "\"D\"ABA F2A|\"A\"EFG e2e|\"D\"fed cBA|\"A7\"ABA GFE|\n",
-      "\"D\"DFA d2A|\"G\"B2A \"D\"d2A|\"G\"BGB \"D\"AFD|\n",
-      "\"Em\"G3 -GBG|\"A7\"E2A B^cd|e2c B2A|\"D\"AFA d2^A|\n",
-      "\"D\"DFd fed|\"A7\"e2A ABc|\"D\"d3 \"A7\"e\n",
+      "P:A\n",
+      "f/2g/2|\"D\"aba \"A7/e\"faf|\n",
       "\n",
       "MUSIC SEQUENCE GENERATED: \n",
       "\n",
-      "K:Bm\n",
+      "M:6/8\n",
+      "K:A\n",
       "P:A\n",
-      "|:B|\"Em\"E2B B2c|\"Bm\"d2d \"F\"^cd^c|\"Bm\"B^AB \"Bm\"A2G|\"Em\"E2B EFG|\"A7\"ABA GFE|\n",
-      "\"D\"D3 DFA|\"G\"B2B \"D\"A2F|\"Em\"G2F \"G\"GBd|\n",
-      "\"C\"e3 -e2c|\"G\"ded BdB|D6|\"Am\"E2A A^GA|\"D7\"B2^A B2^c|\"D\"d3 -d3|\"G\"d^cd B2d|\n",
-      "\"G\"ded B3| \"Em\"G2c Bcd|\"Am\"e2d \"D7\"c2A|\"G\"G3 G3||\n",
-      "K:D\n",
-      "\"D\"ABd fed|Add d2d|\"D\"d2d d2d|\"A7\"f2e -e2c|\n",
-      "\"D\"d2d d^cd|e2d c2A|\"G\"B2B \"A7\"c2B|\n",
-      "\"D\"ABA F2A|\"A\"EFG e2e|\"D\"fed cBA|\"A7\"ABA GFE|\n",
-      "\"D\"DFA d2A|\"G\"B2A \"D\"d2A|\"G\"BGB \"D\"AFD|\n",
-      "\"Em\"G3 -GBG|\"A7\"E2A B^cd|e2c B2A|\"D\"AFA d2^A|\n",
-      "\"D\"DFd fed|\"A7\"e2A ABc|\"D\"d3 \"A7\"e\n"
+      "E|\"A\"E2A A^GA|\"E\"B2B e2d|\"A\"c2A AGA|\"E\"B2A B2c|\"E7\"d2B c2d|\n",
+      "\"A\"e2c \"B7\"Baf|\"E\"e2e e2=e|\"3\"efe cBA|\"D\"dfg \"A\"a3|\n",
+      "P:B\n",
+      "f|\"A\"ecA Ace|\"D\"fga \"A\"ecA|\"E7\"B2G \"A\"AAc|\"D\"d3 -d2::\n",
+      "A|\"G\"GFG BAG|\"D\"F2A d2e|\"D\"f2f fed|\"D\"f2d f2g|\n",
+      "\"Am\"aba agf|\"C\"ede g2f|\"D\"fga \"A7\"gfe|\"Dm\"d3 -d2:|\n",
+      "\n"
      ]
     }
    ],
